--- a/package.json
+++ b/package.json
@@ -16,5 +16,17 @@
   "bugs": {
     "url": "https://github.com/mrprotocoll/math-magician-microverse/issues"
   },
-  "homepage": "https://github.com/mrprotocoll/math-magician-microverse#readme"
+  "homepage": "https://github.com/mrprotocoll/math-magician-microverse#readme",
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0"
+  }
 }
